syntax = "proto3";
package initia.dynamicfee.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "initia/dynamicfee/v1/types.proto";

option go_package = "github.com/initia-labs/initia/x/dynamic-fee/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the move Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines an operation for updating the x/dynamic-fee module
  // parameters.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "dynamicfee/MsgUpdateParams";

  // authority is the address that controls the module
  // (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // params defines the x/dynamic-fee parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}
